--- a/13-TeV-examples/ATLAS-Open-Data-Python-13-TeV-framework-script-HZZ-analysis.ipynb
+++ b/13-TeV-examples/ATLAS-Open-Data-Python-13-TeV-framework-script-HZZ-analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<CENTER><h1>Get running the analysis of Hyy channel using the 13 TeV dataset in Python</h1></CENTER>"
+    "<CENTER><h1>Get running the analysis of HZZ channel using the 13 TeV dataset in Python</h1></CENTER>"
    ]
   },
   {
@@ -27,9 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -39,15 +37,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Nov  5 01:49:04 CET 2019\n",
+      "Di Feb 25 23:48:05 CET 2020\n",
       "\n"
      ]
     }
@@ -70,20 +66,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "folder_demo = 'atlas-demo-Hyy'"
+    "folder_demo = 'atlas-demo-HZZ'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -111,19 +103,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 100K\n",
-      "-rw-r--r--. 1 arturos 1307  13K Nov  5 01:48 demo-CHEP-2019-HZZ.ipynb\n",
-      "-rw-r--r--. 1 arturos 1307  72K Nov  5 01:48 ATLAS_OpenData_01-python_Hyy_channel_analysis_example.ipynb\n",
-      "-rw-r--r--. 1 arturos 1307  12K Nov  5 01:48 demo-CHEP-2019-Hyy.ipynb\n",
-      "drwxr-xr-x. 2 arturos 1307 4.0K Nov  5 01:49 atlas-demo-Hyy\n",
+      "total 72K\n",
+      "-rw-r--r-- 1 student student  41K Feb 24 17:03 bash-demo.ipynb\n",
+      "-rw-r--r-- 1 student student 9.0K Feb 25 23:47 ATLAS-Open-Data-13-TeV-framework-script-HZZ-analysis.ipynb\n",
+      "-rw-r--r-- 1 student student 9.0K Feb 25 23:47 ATLAS-Open-Data-13-TeV-framework-script-Hyy-analysis.ipynb\n",
+      "drwxr-xr-x 2 student student 4.0K Feb 25 23:48 atlas-demo-HZZ\n",
       "\n"
      ]
     }
@@ -143,15 +133,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/eos/home-a/arturos/SWAN_projects/CERN_Summer_Student_demo_2019/notebooks/atlas\n",
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples\n",
       "\n"
      ]
     }
@@ -171,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(folder_demo+\"/\")"
@@ -189,15 +175,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/eos/home-a/arturos/SWAN_projects/CERN_Summer_Student_demo_2019/notebooks/atlas/atlas-demo-Hyy\n",
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/atlas-demo-HZZ\n",
       "\n"
      ]
     }
@@ -217,21 +201,18 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into 'atlas-outreach-cpp-framework-13tev'...\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "myCmd = os.popen('git clone https://gitlab.cern.ch/lserkin/atlas-outreach-cpp-framework-13tev.git').read()\n",
+    "myCmd = os.popen('git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-cpp-framework-13tev.git').read()\n",
     "print(myCmd)"
    ]
   },
@@ -245,12 +226,10 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"atlas-outreach-cpp-framework-13tev/Alpha/\")"
+    "os.chdir(\"atlas-outreach-cpp-framework-13tev/\")"
    ]
   },
   {
@@ -263,15 +242,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/eos/home-a/arturos/SWAN_projects/CERN_Summer_Student_demo_2019/notebooks/atlas/atlas-demo-Hyy/atlas-outreach-cpp-framework-13tev/Alpha\n",
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/atlas-demo-HZZ/atlas-outreach-cpp-framework-13tev\n",
       "\n"
      ]
     }
@@ -291,21 +268,43 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Nov  5 01:49:12 CET 2019\n",
+      "Di Feb 25 23:48:06 CET 2020\n",
       "\n"
      ]
     }
    ],
    "source": [
     "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 28K\n",
+      "drwxr-xr-x 14 student student 4.0K Feb 25 23:48 Analysis\n",
+      "-rwxr-xr-x  1 student student  370 Feb 25 23:48 welcome_web.sh\n",
+      "-rwxr-xr-x  1 student student 1.7K Feb 25 23:48 welcome.sh\n",
+      "-rw-r--r--  1 student student  11K Feb 25 23:48 README.md\n",
+      "drwxr-xr-x  4 student student 4.0K Feb 25 23:48 Plotting\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('ls -lhrt').read()\n",
     "print(myCmd)"
    ]
   },
@@ -318,10 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -329,7 +326,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,6 +334,31 @@
    "source": [
     "command3 = \"echo \\\"1\\\" | ./welcome.sh\"\n",
     "os.system(command3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 56K\n",
+      "-rwxr-xr-x 1 student student  615 Feb 25 23:48 run.sh\n",
+      "-rw-r--r-- 1 student student 8.7K Feb 25 23:48 main_HZZAnalysis.C\n",
+      "-rw-r--r-- 1 student student 5.3K Feb 25 23:48 HZZAnalysisHistograms.h\n",
+      "-rw-r--r-- 1 student student  10K Feb 25 23:48 HZZAnalysis.h\n",
+      "-rw-r--r-- 1 student student  13K Feb 25 23:48 HZZAnalysis.C\n",
+      "drwxr-xr-x 2 student student 4.0K Feb 25 23:48 Output_HZZAnalysis\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('ls -lhrt Analysis/HZZAnalysis').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -350,15 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#analysis=\"HWWAnalysis\"\n",
-    "analysis=\"HyyAnalysis\"\n",
-    "#analysis=\"HZZAnalysis\"\n",
+    "#analysis=\"HyyAnalysis\"\n",
+    "analysis=\"HZZAnalysis\"\n",
     "#analysis=\"SingleTopAnalysis\"\n",
     "#analysis=\"SUSYAnalysis\"\n",
     "#analysis=\"TTbarAnalysis\"\n",
@@ -372,10 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"Analysis/\"+analysis)"
@@ -383,16 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/eos/home-a/arturos/SWAN_projects/CERN_Summer_Student_demo_2019/notebooks/atlas/atlas-demo-Hyy/atlas-outreach-cpp-framework-13tev/Alpha/Analysis/HyyAnalysis\n",
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/atlas-demo-HZZ/atlas-outreach-cpp-framework-13tev/Analysis/HZZAnalysis\n",
       "\n"
      ]
     }
@@ -403,18 +419,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 56K\n",
+      "-rwxr-xr-x 1 student student  615 Feb 25 23:48 run.sh\n",
+      "-rw-r--r-- 1 student student 8.7K Feb 25 23:48 main_HZZAnalysis.C\n",
+      "-rw-r--r-- 1 student student 5.3K Feb 25 23:48 HZZAnalysisHistograms.h\n",
+      "-rw-r--r-- 1 student student  10K Feb 25 23:48 HZZAnalysis.h\n",
+      "-rw-r--r-- 1 student student  13K Feb 25 23:48 HZZAnalysis.C\n",
+      "drwxr-xr-x 2 student student 4.0K Feb 25 23:48 Output_HZZAnalysis\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('ls -lhrt').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run the C++ code now"
+    "### Run the C++ code now\n",
+    "Please, note that we are writing the output in a log file.\n",
+    "(This file can be inspected in real time in a terminal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -422,13 +463,13 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "command4 = \"echo \\\"0\\n1\\\" | ./run.sh\"\n",
+    "command4 = \"echo \\\"0\\n0\\\" | ./run.sh >log\"\n",
     "os.system(command4)"
    ]
   },
@@ -441,10 +482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"../../Plotting/\")"
@@ -452,16 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/eos/home-a/arturos/SWAN_projects/CERN_Summer_Student_demo_2019/notebooks/atlas/atlas-demo-Hyy/atlas-outreach-cpp-framework-13tev/Alpha/Plotting\n",
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/atlas-demo-HZZ/atlas-outreach-cpp-framework-13tev/Plotting\n",
       "\n"
      ]
     }
@@ -505,10 +542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -516,29 +551,38 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "command5 = \"echo \\\"9\\n0\\\" | ./plotme.sh\"\n",
+    "command5 = \"echo \\\"7\\n0\\\" | ./plotme.sh\"\n",
     "os.system(command5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--. 1 arturos 1307 27K Nov  5 01:54 histograms/hist_mYY_bin1.png\n",
-      "-rw-r--r--. 1 arturos 1307 31K Nov  5 01:54 histograms/hist_mYY_cat_bin1.png\n",
+      "-rw-r--r-- 1 student student 23K Feb 25 23:59 histograms/hist_fourlepsys_pt.png\n",
+      "-rw-r--r-- 1 student student 21K Feb 25 23:59 histograms/hist_fourlepsys_y.png\n",
+      "-rw-r--r-- 1 student student 22K Feb 25 23:59 histograms/hist_fourleptE.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 25 23:59 histograms/hist_fourleptID.png\n",
+      "-rw-r--r-- 1 student student 18K Feb 25 23:59 histograms/hist_fourleptch.png\n",
+      "-rw-r--r-- 1 student student 21K Feb 25 23:59 histograms/hist_fourlepteta.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 25 23:59 histograms/hist_fourleptphi.png\n",
+      "-rw-r--r-- 1 student student 22K Feb 25 23:59 histograms/hist_fourleptpt.png\n",
+      "-rw-r--r-- 1 student student 24K Feb 25 23:59 histograms/hist_mLL1.png\n",
+      "-rw-r--r-- 1 student student 26K Feb 25 23:59 histograms/hist_mLL2.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 25 23:59 histograms/hist_n_jets.png\n",
+      "-rw-r--r-- 1 student student 25K Feb 25 23:59 histograms/mass_ext_four_lep.png\n",
+      "-rw-r--r-- 1 student student 23K Feb 25 23:59 histograms/mass_four_lep.png\n",
       "\n"
      ]
     }
@@ -553,25 +597,23 @@
    "metadata": {},
    "source": [
     "<CENTER>\n",
-    "    <h2> The two photons invariant mass </h2>\n",
-    "    <img src=\"atlas-demo-Hyy/atlas-outreach-cpp-framework-13tev/Alpha/Plotting/histograms/hist_mYY_bin1.png\"  alt=\"mass\" width=\"550\" height=\"400\">\n",
+    "    <h2> The four-leptons mass </h2>\n",
+    "    <img src=\"atlas-demo-HZZ/atlas-outreach-cpp-framework-13tev/Plotting/histograms/mass_four_lep.png\"  alt=\"4lep mass\" width=\"560\" height=\"400\">\n",
     "</CENTER>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Nov  5 01:54:58 CET 2019\n",
+      "Di Feb 25 23:59:53 CET 2020\n",
       "\n",
-      "Analysis finished in 5 min 53 s\n"
+      "Analysis finished in  11 min  48 s\n"
      ]
     }
    ],
@@ -579,7 +621,7 @@
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)\n",
     "endtime = datetime.datetime.now()\n",
-    "print(\"Analysis finished in {} min {} s\").format(((endtime - starttime).seconds)/60,((endtime - starttime).seconds)%60)"
+    "print(\"Analysis finished in % 2d min % 2d s\" %(((endtime - starttime).seconds)/60,((endtime - starttime).seconds)%60))"
    ]
   },
   {
@@ -592,21 +634,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
