--- a/13-TeV-examples/ATLAS-Open-Data-cpp-13-TeV-framework-script-Hyy-analysis.ipynb
+++ b/13-TeV-examples/ATLAS-Open-Data-cpp-13-TeV-framework-script-Hyy-analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<CENTER>\n",
-    "    <a href=\"http://opendata.atlas.cern\" class=\"icons\"><img src=\"../Assets/ATLASOD.gif\" style=\"width:50%\"></a>\n",
+    "    <a href=\"http://opendata.atlas.cern\" class=\"icons\"><img src=\"../images/ATLASOD.gif\" style=\"width:50%\"></a>\n",
     "</CENTER>"
    ]
   },
@@ -588,7 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chdir(\"atlas-outreach-cpp-framework-13tev/Beta/\");"
+    "chdir(\"atlas-outreach-cpp-framework-13tev/\");"
    ]
   },
   {
