--- a/8-TeV-examples/get-running-8-tev-code-cpp.ipynb
+++ b/8-TeV-examples/get-running-8-tev-code-cpp.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<CENTER>\n",
-    "    <a href=\"http://opendata.atlas.cern\" class=\"icons\"><img src=\"../Assets/ATLASOD.gif\" style=\"width:50%\"></a>\n",
+    "    <a href=\"http://opendata.atlas.cern\" class=\"icons\"><img src=\"../images/ATLASOD.gif\" style=\"width:50%\"></a>\n",
     "</CENTER>"
    ]
   },
