adding correct HTML to plots

--- a/13-TeV-examples/ATLAS-Open-Data-BASH-13-TeV-framework-script-HZZ-analysis.ipynb
+++ b/13-TeV-examples/ATLAS-Open-Data-BASH-13-TeV-framework-script-HZZ-analysis.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,40 @@
       "Looking up for exact location of files: OK (1 files)                 \n",
       "Looking up for exact location of files: OK (1 files)                 \n",
       "Info in <TPacketizer::TPacketizer>: Initial number of workers: 2\n",
-      "Validating files: OK (1 files)                 \n"
+      "Validating files: OK (1 files)                 \n",
+      "[TProof::Progress] Total 14485 events\t|====================| 100.00 % [30.9 evts/s, 19.9 kB/s, time left: 0.0 s]]]\n",
+      " Query processing time: 469.1 s\n",
+      "Writting with name option: ZH125_ZZ4lep workers still sending)   \n",
+      "Lite-0: all output objects have been merged                                                         \n",
+      " \n",
+      "Info in <TProofLite::SetQueryRunning>: starting query: 29\n",
+      "Info in <TProofQueryResult::SetRunning>: nwrks: 2\n",
+      "Info in <ACLiC>: unmodified script has already been compiled and loaded\n",
+      "Looking up for exact location of files: OK (1 files)                 \n",
+      "Looking up for exact location of files: OK (1 files)                 \n",
+      "Info in <TPacketizer::TPacketizer>: Initial number of workers: 2\n",
+      "Validating files: OK (1 files)                 \n",
+      "[TProof::Progress] Total 15379 events\t|====================| 100.00 % [390.0 evts/s, 246.3 kB/s, time left: 0.0 s]\n",
+      " Query processing time: 39.4 s\n",
+      "Writting with name option: WH125_ZZ4lep workers still sending)   \n",
+      "Lite-0: all output objects have been merged                                                         \n",
+      " \n",
+      "Info in <TProofLite::SetQueryRunning>: starting query: 30\n",
+      "Info in <TProofQueryResult::SetRunning>: nwrks: 2\n",
+      "Info in <ACLiC>: unmodified script has already been compiled and loaded\n",
+      "Looking up for exact location of files: OK (1 files)                 \n",
+      "Looking up for exact location of files: OK (1 files)                 \n",
+      "Info in <TPacketizer::TPacketizer>: Initial number of workers: 2\n",
+      "Validating files: OK (1 files)                 \n",
+      "[TProof::Progress] Total 191126 events\t|====================| 100.00 % [15067.1 evts/s, 9.1 MB/s, time left: 0.0 s]]\n",
+      " Query processing time: 12.7 s\n",
+      "Writting with name option: VBFH125_ZZ4lep rkers still sending)   \n",
+      "Lite-0: all output objects have been merged                                                         \n",
+      "end of ROOT execution\n",
+      "\n",
+      "real\t47m19.963s\n",
+      "user\t19m9.596s\n",
+      "sys\t26m1.898s\n"
      ]
     }
    ],
@@ -570,9 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/demo/atlas-outreach-cpp-framework-13tev/Plotting\n"
+     ]
+    }
+   ],
    "source": [
     " cd ../../Plotting/\n",
     " pwd\n"
@@ -580,9 +621,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WELCOME!! Which analysis you want to plot?\n",
+      "Input your option now (and click <ENTER>):\n",
+      "0 = WBosonAnalysis\n",
+      "1 = ZBosonAnalysis\n",
+      "2 = TTbarAnalysis\n",
+      "3 = SingleTopAnalysis\n",
+      "4 = WZDiBosonAnalysis\n",
+      "5 = ZZDiBosonAnalysis\n",
+      "6 = HWWAnalysis\n",
+      "7 = HZZAnalysis\n",
+      "8 = ZTauTauAnalysis\n",
+      "9 = HyyAnalysis\n",
+      "10 = SUSYAnalysis\n",
+      "11 = ZPrimeBoostedAnalysis\n",
+      "Now, choose the location of the HZZAnalysis output!\n",
+      "If the location corresponds to ../Analysis/HZZAnalysis/Output_HZZAnalysis: type 0\n",
+      "If you have a custom location path: type 1\n",
+      "Info in <TUnixSystem::ACLiC>: creating shared library /home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/demo/atlas-outreach-cpp-framework-13tev/Plotting/./Plotting_cxx.so\n",
+      "\n",
+      " ---------------------DISCLAIMER--------------------- \n",
+      "\n",
+      "This Software is intended for educational use only!\n",
+      "Under no circumstances does it qualify to reproduce actual ATLAS analysis results or produce publishable results! \n",
+      "\n",
+      " ---------------------------------------------------- \n",
+      "\n",
+      "Analysis option found, proceeding...\n",
+      "Reading list of histograms from: list_histos/HistoList_HZZAnalysis.txt \n",
+      " \n",
+      "Analysis: HZZAnalysis, reading input from: inputfiles/Files_HZZ.txt \n",
+      " \n",
+      "Reading files from: ../Analysis/HZZAnalysis/Output_HZZAnalysis \n",
+      " \n",
+      "=====processing HZZAnalysis=====\n",
+      "\n",
+      "\n",
+      "Plotting histogram: hist_fourlepsys_pt\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourlepsys_pt.png has been created\n",
+      "Plotting histogram: hist_fourlepsys_y\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourlepsys_y.png has been created\n",
+      "Plotting histogram: hist_fourleptE\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourleptE.png has been created\n",
+      "Plotting histogram: hist_fourleptID\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourleptID.png has been created\n",
+      "Plotting histogram: hist_fourleptch\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourleptch.png has been created\n",
+      "Plotting histogram: hist_fourlepteta\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourlepteta.png has been created\n",
+      "Plotting histogram: hist_fourleptphi\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourleptphi.png has been created\n",
+      "Plotting histogram: hist_fourleptpt\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_fourleptpt.png has been created\n",
+      "Plotting histogram: hist_mLL1\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_mLL1.png has been created\n",
+      "Plotting histogram: hist_mLL2\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_mLL2.png has been created\n",
+      "Plotting histogram: hist_n_jets\n",
+      "Info in <TCanvas::Print>: png file histograms/hist_n_jets.png has been created\n",
+      "Plotting histogram: mass_ext_four_lep\n",
+      "Info in <TCanvas::Print>: png file histograms/mass_ext_four_lep.png has been created\n",
+      "Plotting histogram: mass_four_lep\n",
+      "Info in <TCanvas::Print>: png file histograms/mass_four_lep.png has been created\n"
+     ]
+    }
+   ],
    "source": [
     "echo $'7\\n0' | ./plotme.sh"
    ]
@@ -591,23 +701,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![mass_four_lep](https://raw.githubusercontent.com/artfisica/ICTP-2019/master/histograms/mass_four_lep.png)"
+    "<CENTER>\n",
+    "    <h2> The four-leptons mass </h2>\n",
+    "    <img src=\"demo/atlas-outreach-cpp-framework-13tev/Plotting/histograms/mass_four_lep.png\"  alt=\"4lep mass\" width=\"560\" height=\"400\">\n",
+    "</CENTER>\n",
+    "\n",
+    "<!-- ![mass_four_lep](https://raw.githubusercontent.com/artfisica/ICTP-2019/master/histograms/mass_four_lep.png) -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/GIT-REPOS/notebooks-frameworks-opendata/13-TeV-examples/demo/atlas-outreach-cpp-framework-13tev/Plotting\n"
+     ]
+    }
+   ],
    "source": [
     "pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r-- 1 student student 23K Feb 26 00:44 histograms/hist_fourlepsys_pt.png\n",
+      "-rw-r--r-- 1 student student 21K Feb 26 00:44 histograms/hist_fourlepsys_y.png\n",
+      "-rw-r--r-- 1 student student 22K Feb 26 00:44 histograms/hist_fourleptE.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 26 00:44 histograms/hist_fourleptID.png\n",
+      "-rw-r--r-- 1 student student 18K Feb 26 00:44 histograms/hist_fourleptch.png\n",
+      "-rw-r--r-- 1 student student 21K Feb 26 00:44 histograms/hist_fourlepteta.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 26 00:44 histograms/hist_fourleptphi.png\n",
+      "-rw-r--r-- 1 student student 22K Feb 26 00:44 histograms/hist_fourleptpt.png\n",
+      "-rw-r--r-- 1 student student 24K Feb 26 00:44 histograms/hist_mLL1.png\n",
+      "-rw-r--r-- 1 student student 26K Feb 26 00:44 histograms/hist_mLL2.png\n",
+      "-rw-r--r-- 1 student student 19K Feb 26 00:44 histograms/hist_n_jets.png\n",
+      "-rw-r--r-- 1 student student 25K Feb 26 00:44 histograms/mass_ext_four_lep.png\n",
+      "-rw-r--r-- 1 student student 23K Feb 26 00:44 histograms/mass_four_lep.png\n"
+     ]
+    }
+   ],
    "source": [
     "ls -lhrt histograms/*png"
    ]
@@ -616,14 +759,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/artfisica/ICTP-2019/master/histograms/hist_mLL1.png\" alt=\"mass\" width=\"500\" height=\"400\">"
+    "<CENTER>\n",
+    "    <h2> The four-leptons mass </h2>\n",
+    "    <img src=\"demo/atlas-outreach-cpp-framework-13tev/Plotting/histograms/hist_mLL1.png\"  alt=\"4lep mass\" width=\"560\" height=\"400\">\n",
+    "</CENTER>\n",
+    "\n",
+    "<!-- <img src=\"https://raw.githubusercontent.com/artfisica/ICTP-2019/master/histograms/hist_mLL1.png\" alt=\"mass\" width=\"500\" height=\"400\"> -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mi Feb 26 00:44:35 CET 2020\n"
+     ]
+    }
+   ],
    "source": [
     "date"
    ]
